--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.11.0",
+    "cheerio": "^1.1.2",
     "gsap": "^3.13.0",
     "lit": "^3.3.1",
+    "nanostores": "^1.0.1",
     "prismjs": "^1.30.0",
     "tailwindcss": "^4.1.11"
   }
